--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"sass": "^1.91.0",
+		"sass-embedded": "^1.92.0",
 		"svelte": "^4.2.19",
 		"tailwindcss": "^3.4.1",
 		"vite": "^5.4.15"
